--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,7 @@ const {title = "Dn Gadgets"} = Astro.props;
 	<meta name="robots" content="index, follow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="language" content="English">
+	<meta name="generator" content={Astro.generator} />
 	<link rel="icon" type="image/x-icon" href={iconLogo.src}>
 	<title>{title}</title>
 
